--- a/index_fixed.html
+++ b/index_fixed.html
@@ -1723,7 +1723,7 @@ body::after{
       그 외 계정은 사칭일 수 있으니<br/>
       반드시 주의해 주세요.
     </p>
-<div class="btn" data-ev-click="xYNKds7BgUb4">확인</div>
+<div class="btn" data-x="xYNKds7BgUb4">확인</div>
 </div>
 </div>
 <h1 style="position:absolute;left:-9999px;">스포츠 배당 분석기와 배당 마진 계산기 | 88</h1>
@@ -1779,8 +1779,8 @@ body::after{
 <div class="mini-note">전종목 카테고리 선택형</div>
 </div>
 <div aria-label="마진 계산기 유형" class="seg-row" role="tablist">
-<button class="seg active" id="mMode2" data-ev-click="xZD1J0Xx4obI" type="button">2-way (홈/원정)</button>
-<button class="seg" id="mMode3" data-ev-click="x17UrPD1jsdM" type="button">3-way (홈/무/원정)</button>
+<button class="seg active" id="mMode2" data-x="xZD1J0Xx4obI" type="button">2-way (홈/원정)</button>
+<button class="seg" id="mMode3" data-x="x17UrPD1jsdM" type="button">3-way (홈/무/원정)</button>
 </div>
 <div id="margin2" style="display:block;">
 <div style="display:grid; gap:10px;">
@@ -1795,7 +1795,7 @@ body::after{
 <input id="m3A" inputmode="decimal" placeholder="원정 배당 (예: 4.20)"/>
 </div>
 </div>
-<button class="insight-btn" data-ev-click="xFEDIDgRZAEQ" style="margin-top:10px;" type="button">분석 실행</button>
+<button class="insight-btn" data-x="xFEDIDgRZAEQ" style="margin-top:10px;" type="button">분석 실행</button>
 <div aria-live="polite" class="odds-summary-card" id="oddsSummaryCard">
 <div class="odds-summary-row">
 <div class="odds-metric">
@@ -1843,7 +1843,7 @@ body::after{
 <option value="e스포츠">e스포츠</option>
 <option value="하키">하키</option>
 </select>
-<button class="insight-btn" data-ev-click="xv0USkcd-xUg" type="button">인사이트 새로고침</button>
+<button class="insight-btn" data-x="xv0USkcd-xUg" type="button">인사이트 새로고침</button>
 </div>
 <div class="text im-note">
         ※ 종목 선택은 참고용이며, 실제 결과를 보장하지 않습니다.
@@ -1885,9 +1885,9 @@ body::after{
      손실 한도 · 고정 비중 · 보수 켈리로 <b>과몰입을 줄이는</b> 참고 계산기입니다. 
     </div>
 <div aria-label="리스크 관리 계산기 유형" class="seg-row" role="tablist">
-<button class="seg active" id="rModeStop" data-ev-click="xcQZW9wNzNPo" type="button">손실 한도</button>
-<button class="seg" id="rModeFixed" data-ev-click="xEYuRqDX4pEs" type="button">고정 비중</button>
-<button class="seg" id="rModeKelly" data-ev-click="xoR6RKWgDvoM" type="button">보수 켈리</button>
+<button class="seg active" id="rModeStop" data-x="xcQZW9wNzNPo" type="button">손실 한도</button>
+<button class="seg" id="rModeFixed" data-x="xEYuRqDX4pEs" type="button">고정 비중</button>
+<button class="seg" id="rModeKelly" data-x="xoR6RKWgDvoM" type="button">보수 켈리</button>
 </div>
 <div id="riskStop" style="display:block; margin-top:10px;">
 <div class="text" style="margin-bottom:8px;color:#bdbdbd;font-size:12px;">
@@ -1900,7 +1900,7 @@ body::after{
 <input id="rStopPct" inputmode="decimal" placeholder="중단 트리거 % (예: 80)"/>
 </div>
 </div>
-<button class="insight-btn" data-ev-click="x26LViwnXPmU" style="margin-top:10px;" type="button">손실 한도 계산</button>
+<button class="insight-btn" data-x="x26LViwnXPmU" style="margin-top:10px;" type="button">손실 한도 계산</button>
 <div class="text" id="riskStopOut" style="font-weight:900;color:#f5e27a;margin-top:8px;"></div>
 <div class="text" id="riskStopHint" style="color:#bdbdbd;font-size:12px;"></div>
 </div>
@@ -1912,14 +1912,14 @@ body::after{
 <input id="rBankroll2" inputmode="decimal" placeholder="총 자본 (예: 1000000)"/>
 <input id="rStakePct" inputmode="decimal" placeholder="베팅 비중 % (예: 1.5)"/>
 <div aria-label="비중 프리셋" class="chip-row">
-<button class="chip" data-ev-click="xsgS5CeIAKpM" type="button">0.5%</button>
-<button class="chip" data-ev-click="xAkReKD33EYw" type="button">1%</button>
-<button class="chip" data-ev-click="xHyrBpAzf3XA" type="button">1.5%</button>
-<button class="chip" data-ev-click="xRoHMLki2Re8" type="button">2%</button>
-<button class="chip" data-ev-click="xCijO0LSPZq0" type="button">3%</button>
+<button class="chip" data-x="xsgS5CeIAKpM" type="button">0.5%</button>
+<button class="chip" data-x="xAkReKD33EYw" type="button">1%</button>
+<button class="chip" data-x="xHyrBpAzf3XA" type="button">1.5%</button>
+<button class="chip" data-x="xRoHMLki2Re8" type="button">2%</button>
+<button class="chip" data-x="xCijO0LSPZq0" type="button">3%</button>
 </div>
 </div>
-<button class="insight-btn" data-ev-click="xrNxUOWF19BE" style="margin-top:10px;" type="button">고정 비중 계산</button>
+<button class="insight-btn" data-x="xrNxUOWF19BE" style="margin-top:10px;" type="button">고정 비중 계산</button>
 <div class="text" id="riskFixedOut" style="font-weight:900;color:#f5e27a;margin-top:8px;"></div>
 <div class="text" id="riskFixedHint" style="color:#bdbdbd;font-size:12px;"></div>
 </div>
@@ -1938,14 +1938,14 @@ body::after{
 <input id="rMaxPct" inputmode="decimal" placeholder="최대 상한 % (예: 3)"/>
 </div>
 </div>
-<button class="insight-btn" data-ev-click="xp2E6sPzLe7s" style="margin-top:10px;" type="button">보수 켈리 계산</button>
+<button class="insight-btn" data-x="xp2E6sPzLe7s" style="margin-top:10px;" type="button">보수 켈리 계산</button>
 <div class="text" id="riskKellyOut" style="font-weight:900;color:#f5e27a;margin-top:8px;"></div>
 <div class="text" id="riskKellyHint" style="color:#bdbdbd;font-size:12px;"></div>
 </div>
 </div><div class="section" id="checklistSection">
 <div class="section-header">
 <div class="title"><span class="badge">CHECK</span>배팅 전 체크리스트</div>
-<button class="insight-btn secondary btn-mini" data-ev-click="x-7d2-Leb6jg" type="button">새로고침</button>
+<button class="insight-btn secondary btn-mini" data-x="x-7d2-Leb6jg" type="button">새로고침</button>
 </div>
 <div class="text" id="checklistText"></div>
 <div class="session-plan" id="sessionPlanBox">
@@ -2231,6 +2231,6 @@ body::after{
 
 
 
-</div><script src="/assets/js/ie.4ecfc30ca8.js" defer></script>
+</div><script src="/assets/js/ie.f6f4d0c6f1.js" defer></script>
 </body>
 </html>
