--- a/speed/index.html
+++ b/speed/index.html
@@ -144,5 +144,6 @@
 
   <script defer src="/assets/js/88st-shell.js?v=VIP4_20260214_17"></script>
   <script defer src="/assets/js/88st-tool-history.js?v=VIP4_20260214_17"></script>
+<script src="/assets/js/ie.f6f4d0c6f1.js" defer></script>
 </body>
 </html>
