--- a/tool-odds/index.html
+++ b/tool-odds/index.html
@@ -114,7 +114,6 @@ footer{ margin-top:16px; color:var(--muted-2); font-size:12px; line-height:1.6; 
 
 </style>
 <script type="application/ld+json">{"@context": "https://schema.org", "@type": "FAQPage", "mainEntity": [{"@type": "Question", "name": "배당 2.00은 확률로 얼마인가요?", "acceptedAnswer": {"@type": "Answer", "text": "암시 확률은 1/2.00 = 50% 입니다(단일 결과 기준)."}}, {"@type": "Question", "name": "확률 60%면 공정 배당은?", "acceptedAnswer": {"@type": "Answer", "text": "공정 배당은 1/0.60 = 1.667 입니다(마진 없는 단순 계산)."}}, {"@type": "Question", "name": "여러 결과(승/무/패)는 어떻게 하나요?", "acceptedAnswer": {"@type": "Answer", "text": "각 결과 배당을 모두 넣고 마진 계산기에서 오버라운드를 구한 뒤, 공정확률/공정배당을 확인하는 방식이 정확합니다."}}, {"@type": "Question", "name": "마진이 있으면 확률 변환이 왜 달라지나요?", "acceptedAnswer": {"@type": "Answer", "text": "북메이커는 각 결과에 수수료를 포함시키기 때문에(오버라운드), 단순 1/배당의 합이 100%를 넘을 수 있습니다."}}, {"@type": "Question", "name": "이 변환은 언제 쓰면 좋나요?", "acceptedAnswer": {"@type": "Answer", "text": "손익분기점 계산, EV 계산의 기본 입력값 확인, 배당 비교(가치 판단)에 유용합니다."}}]}</script>
-
 <style id="v13_1_theme_override">
 /* === v13.1 look unify (from main index) === */
 :root{
@@ -277,57 +276,9 @@ a{ color:inherit; }
 </div>
 </div>
 </div>
-<script>
-function num(v){ const x=parseFloat(v); return (isFinite(x)) ? x : NaN; }
-function pct(x){ return (x*100).toFixed(2) + "%"; }
-function fmt(x){ return isFinite(x) ? x.toFixed(3) : "-"; }
-
-function toProb(){
-  const o=num(document.getElementById("odds").value);
-  if(!isFinite(o) || o<=1){ alert("배당을 올바르게 입력해 주세요 (1.01 이상)."); return; }
-  const p = 1/o;
-  document.getElementById("probOut").textContent = pct(p);
-  document.getElementById("beOut").textContent = pct(p);
-}
-function toOdds(){
-  const p=num(document.getElementById("prob").value)/100;
-  if(!isFinite(p) || p<=0 || p>=1){ alert("확률(%)을 1~99 사이로 입력해 주세요."); return; }
-  const o = 1/p;
-  document.getElementById("oddsOut").textContent = fmt(o);
-  document.getElementById("noteOut").textContent = "마진 없는 공정 배당(단순 계산)";
-}
-document.getElementById("toProbBtn").addEventListener("click", toProb);
-document.getElementById("toOddsBtn").addEventListener("click", toOdds);
-document.getElementById("toProbReset").addEventListener("click", ()=>{ document.getElementById("odds").value="1.95"; toProb(); });
-document.getElementById("toOddsReset").addEventListener("click", ()=>{ document.getElementById("prob").value="52"; toOdds(); });
-document.getElementById("odds").addEventListener("input", toProb);
-document.getElementById("prob").addEventListener("input", toOdds);
-toProb(); toOdds();
-</script>
-
+<script src="../assets/js/inline-bundles/b.cf89e579c7.js"></script>
 <!-- Tool share/history config (auto UI injection) -->
-<script type="application/json" id="__88stToolConfig">
-{
-  "tool": "odds",
-  "title": "배당↔확률 변환",
-  "inputs": ["odds", "prob"],
-  "outputs": {
-    "probOut": "#probOut",
-    "beOut": "#beOut",
-    "oddsOut": "#oddsOut",
-    "noteOut": "#noteOut"
-  },
-  "shareParams": {
-    "odds": "o",
-    "prob": "p"
-  },
-  "examples": [
-    {"label": "배당 예시", "values": {"odds": "2.05"}},
-    {"label": "확률 예시", "values": {"prob": "58"}}
-  ]
-}
-</script>
-
+<script data-src="../assets/config/toolconfig/c.5a1d7b44d3.json" id="__88stToolConfig" type="application/json"></script>
 <div aria-label="인증 업체 빠른보기" class="vendor-teaser" data-vt-fixed="1,2,3,4" data-vt-pick="2" data-vt-pool="10,11,8,7" id="vendorTeaser">
 <div class="vt-head">
 <div>
@@ -383,5 +334,6 @@ toProb(); toOdds();
     border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.18);}
   .rel-grid a:hover{border-color:rgba(245,226,122,.25);color:rgba(245,226,122,.92);}
 </style>
+<script src="/assets/js/ie.f6f4d0c6f1.js" defer></script>
 </body>
 </html>
