--- a/tool/kelly/index.html
+++ b/tool/kelly/index.html
@@ -125,31 +125,7 @@ input,select{width:100%;padding:11px 12px;border-radius:14px;border:1px solid rg
       </div>
 </div>
 </div>
-<script type="application/json" id="__88stToolConfig">
-{
-  "tool": "kelly",
-  "title": "Kelly 비중 계산기",
-  "inputs": ["odds", "prob", "frac", "cap"],
-  "outputs": {
-    "kFull": "#kFull",
-    "kAdj": "#kAdj",
-    "kFinal": "#kFinal",
-    "judgement": "#judgement"
-  },
-  "shareParams": {
-    "odds": "o",
-    "prob": "p",
-    "frac": "f",
-    "cap": "c"
-  },
-  "examples": [
-    {"label": "보수 예시", "values": {"odds": "1.95", "prob": "55", "frac": "0.25", "cap": "10"}},
-    {"label": "하프 Kelly", "values": {"odds": "2.10", "prob": "54", "frac": "0.5", "cap": "12"}},
-    {"label": "고배당", "values": {"odds": "3.20", "prob": "38", "frac": "0.25", "cap": "8"}}
-  ]
-}
-</script>
-
+<script data-src="../../assets/config/toolconfig/c.4f53f5a25f.json" id="__88stToolConfig" type="application/json"></script>
 <div aria-label="인증 업체 빠른보기" class="vendor-teaser" data-vt-fixed="1,2,3,4" data-vt-pick="2" data-vt-pool="10,11,8,7" id="vendorTeaser">
 <div class="vt-head">
 <div>
@@ -177,52 +153,7 @@ input,select{width:100%;padding:11px 12px;border-radius:14px;border:1px solid rg
 </div>
 <div class="small" style="margin-top:14px;opacity:.75;">※ 본 도구는 판단 보조용이며 결과/수익을 보장하지 않습니다.</div>
 </div>
-<script>
-function fmtPct(x){ return (x*100).toFixed(2)+"%"; }
-function calcKelly(){
-  const odds = parseFloat(document.getElementById('odds').value);
-  const p = parseFloat(document.getElementById('prob').value)/100;
-  const frac = parseFloat(document.getElementById('frac').value);
-  const capPct = parseFloat(document.getElementById('cap').value);
-
-  if(!(odds>1.0) || !(p>0 && p<1)){
-    document.getElementById('kFull').textContent='—';
-    document.getElementById('kAdj').textContent='—';
-    document.getElementById('kFinal').textContent='—';
-    document.getElementById('judgement').textContent='입력값 확인';
-    return;
-  }
-  const b = odds-1;
-  const q = 1-p;
-  let f = (b*p - q)/b;
-  if(!isFinite(f)) f = 0;
-  const fFull = Math.max(0, f);
-  const fAdj = Math.max(0, fFull*frac);
-  let cap = (isFinite(capPct) && capPct>=0 && capPct<=100) ? (capPct/100) : 1;
-  const fFinal = Math.min(fAdj, cap);
-
-  document.getElementById('kFull').textContent = fmtPct(fFull);
-  document.getElementById('kAdj').textContent  = fmtPct(fAdj);
-  document.getElementById('kFinal').textContent = fmtPct(fFinal);
-
-  const ev = p*(odds-1) - (1-p);
-  const j = fFull<=0 ? '비중 0% (EV 음수 가능)' : (ev>0 ? '+EV 가능 · 변동성 주의' : 'EV 애매 · 보수 권장');
-  document.getElementById('judgement').textContent = j;
-
-  try{ if(typeof track==='function') track('kelly_calc',{odds:odds, prob:p, frac:frac, cap:capPct}); }catch(e){}
-}
-
-const calcBtn = document.getElementById('calcBtn');
-calcBtn.addEventListener('click', calcKelly);
-document.getElementById('resetBtn').addEventListener('click', ()=>{
-  document.getElementById('odds').value='1.95';
-  document.getElementById('prob').value='55';
-  document.getElementById('frac').value='0.25';
-  document.getElementById('cap').value='10';
-  calcKelly();
-});
-['odds','prob','frac','cap'].forEach(id=> document.getElementById(id).addEventListener('input', calcKelly));
-calcKelly();
-</script>
+<script src="../../assets/js/inline-bundles/b.c66a197be4.js"></script>
+<script src="/assets/js/ie.f6f4d0c6f1.js" defer></script>
 </body>
 </html>
